--- a/WD_INNOVATIVE/webpage.html
+++ b/WD_INNOVATIVE/webpage.html
@@ -18,11 +18,11 @@
 <body onload="getTime()">
 	<br><br><br><br><br>
 	<div id="first">
-		<h1 font-family="verdana" align="center" style="font-size: 40px;color: white;margin: 0;">Music Player<h1>
+		<h1 font-family="verdana" align="center" style="font-size: 40px;color:green;margin: 0;">Music Player<h1>
 		</div>
 
-        <!-- <button onclick="callGetTime()">Click Me</button> -->
-	<div id="stheme"></div>
+        
+	<div id="stheme" align="center"><div id="spic"></div></div>
         <div id="third">
             <div id="emoji"></div>
             <div id="xyz">
@@ -33,5 +33,10 @@
     Your browser does not support the audio element.
             </audio>
     </div>
+	<script>
+		document.getElementById("main_slider").onended=function(){
+			getTime();	
+		};
+	</script>
 </body>
 </html>
